--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.si4t</groupId>
-    <artifactId>si4t-solr</artifactId>
+    <artifactId>si4t-logger</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
